<resources>
    <string name="app_name">爱库存</string>
    <string name="channel">1000</string>
    <string name="msg_text_title">提示信息</string>
    <string name="msg_text_loading">加载中...</string>
    <string name="msg_text_autologin">自动登录中...</string>
    <string name="login">登录</string>
    <string name="wechat_login_button">微信账号登录</string>
    <string name="msg_text_initdata">数据初始化...</string>
    <string name="text_copyright">© 2018 akucun. All rights reserved.</string>
    <string name="text_copyright2"> © 2017-2018\n上海众旦信息科技有限公司</string>
    <string name="text_about">爱库存 – 让成交变简单\n\n爱库存由上海众旦信息科技有限公司于2017年创办，致力于成为全球领先的网络众包分销平台。\n\n我们为职业代购提供正品低价库存货，是品牌不良资产的处理专家。\n\n平台通过独有的S2b2C模式，打通品牌方的库存API，将品牌库存数字化、图片化，再通过爱库存APP提供给分销商进行分销。</string>
    <string name="address_tip">注意：代购您好！爱库存不支持一件代发，请不要直接填写客户地址，仅限代购本人收货地址，爱库存合并发货，如果您直接填写客户地址造成您的货品全部发到客户地址，造成的后果有您自己承担！
谢谢配合！</string>
    <string name="order_tip">注意：请您在24小时内支付，超时系统会自动取消</string>
    <string name="cart_tip">提示：购物车里商品有效期30分钟，请在30分钟内支付，超时回收；回收详情请查看回收清单</string>
    <string name="order_refund_tip">订单已发货，请输入退货快递单号\n客服收到货品会退回货品金额到您的账户余额</string>
    <string name="order_refund_addr">退货地址：上海市闵行区沪闵路1871号8号楼302\n收件人：爱库存\n电 话：021-31133229</string>
    <string name="order_huanhuo_tip">换货先对原货品退货退款，再重新下单\n订单已发货，请输入退货快递单号\n客服收到货品会退回货品金额到您的账户余额</string>
    <string name="member_tip">1、系统仅支持VIP会员下单，享受物价优惠\n2、根据您的日常转发和下单行为，系统自动调整会员级别\n3、不同会员级别，有不同的购物车商品数量限制和订单支付时限</string>
    <string name="buy_check_tips">您可以在设置中关闭备注开关，该确认框将不再显示</string>
    <string name="buy_input_tips">请输入商品备注信息</string>
    <string name="lou_fa_tips">请您仔细核对，并与客服联系\n您确认没有收到这件货吗?</string>
    <string name="youhui_tips">优惠金额</string>
    <string name="tuihuo_tip">将您的货品寄回到以下地址，请输入退货快递单号</string>
    <string name="myinv"><u>我的邀请记录</u></string>
    <string name="wechat_login">微信登录</string>
    <string name="phone_num_login">手机登录</string>
    <string name="login_clause_description">登录即表明您同意 使用条款</string>
    <string name="account_amount">账户余额： </string>
    <string name="account_recharge">充&#8194;&#8194;值</string>
    <string name="sale_all">全部</string>
    <string name="sale_platform_shortage">平台缺货</string>
    <string name="sale_user_cancel">用户取消</string>
    <string name="sale_return_goods">退货中</string>
    <string name="sale_returned_goods">已退货</string>
    <string name="sale_copy_address">复制地址</string>
    <string name="sale_input_logistics_company_name">请输入物流公司名称</string>
    <string name="sale_input_express_number">请输入快递单号</string>
    <string name="sale_contact_customer_service">联系客服</string>
    <string name="service_num">服务单号：----</string>
    <string name="apply_time">申请时间：----</string>
    <string name="order_number">订单号：----</string>
    <string name="refresh">刷&#8194;新</string>
    <string name="after_sales_schedule">售后进度</string>
    <string name="problem_description">问题描述</string>
    <string name="missing_goods">货品漏发</string>
    <string name="quality_problem">质量问题</string>
    <string name="wrong_number">发错款号</string>
    <string name="wrong_color">发错颜色</string>
    <string name="wrong_size">发错尺寸</string>
    <string name="choose_service">选择服务</string>
    <string name="choose_service_need">请选择您需求的服务</string>
    <string name="return_refund">退货退款</string>
    <string name="return_reissue">退货并补发</string>
    <string name="describe_details_problem">请您描述问题的详细信息</string>
    <string name="upload_photos_problem_items">请上传问题货品照片</string>
    <string name="phone_num">手机号：</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="password">密&#8194;&#8194;码：</string>
    <string name="input_password">请输入密码</string>
    <string name="get_verf_code">获取验证码</string>
    <string name="input_verf_code">请输入验证码</string>
    <string name="verification_code">验证码：</string>
    <string name="skip">跳过</string>
    <string name="choose_size_first_and_then_change_size">先选尺码 再按确定换尺码</string>
    <string name="invitation_code">邀请码</string>
    <string name="open_membership">开通会员</string>
    <string name="input_invitation_code">请输入邀请码</string>
    <string name="all_read">全部已读</string>
    <string name="pending_payment">待支付</string>
    <string name="paymented">已支付</string>
    <string name="pending_shipment">待发货</string>
    <string name="picking">拣货中</string>
    <string name="shipped">已发货</string>
    <string name="canceled">已取消</string>
    <string name="total">合计： --</string>
    <string name="total_money">结算金额： ¥ --</string>
    <string name="go_pay">去支付</string>
    <string name="goods_amount">商品金额</string>
    <string name="freight">运&#8194;&#8194;费</string>
    <string name="amount_payable">应付金额</string>
    <string name="balance_payment">余额支付</string>
    <string name="available_balance">可用余额</string>
    <string name="wechat_pay">微信支付</string>
    <string name="wechat_pay_info">亿万用户的选择，更快更安全</string>
    <string name="alipay_pay_info">数亿用户都在用，安全可托付</string>
    <string name="alipay">支付宝</string>
    <string name="choose_package">选择充值套餐</string>
    <string name="custom_recharge">自定义充值</string>
    <string name="choose_size_then_determine_the_replacement">先选尺码 再按确定换货</string>
    <string name="search_content">搜索商品款号/序号/关键字/光/有货</string>
    <string name="search_order_content">搜索商品款号/序号/关键字/备注</string>
    <string name="synchronous_commodity_data">同步商品数据</string>
    <string name="cleaer_img_cache">清理图片缓存</string>
    <string name="single_memo_switch">下单备注开关</string>
    <string name="check_update">检查更新</string>
    <string name="terms_of_use">使用条款</string>
    <string name="about_us">关于我们</string>
    <string name="login_out">注销登录</string>
    <string name="goto_bind">去绑定</string>
    <string name="download_bill">下载对账单中...</string>
    <string name="preview">预&#8194;览</string>
    <string name="share">分&#8194;享</string>
    <string name="nick_name">昵&#8194;&#8194;称： </string>
    <string name="bind_phone_num">绑定手机号： </string>
    <string name="input_nick_name">请输入昵称</string>
    <string name="service_number">服务单号：</string>
    <string name="order_number_text">订单号：</string>
    <string name="missing_reissue">漏发补发</string>
    <string name="after_sales_schedule_lost_circulation_reissued">售后进度：漏发已补发</string>
    <string name="remark">备注</string>
    <string name="re_purchase">重新购买</string>
    <string name="one_year_membership">一年期会员</string>
    <string name="valid_for_one_year">有效期一年，购买立即生效</string>
    <string name="scan_code_sorting">扫码分拣</string>
    <string name="customer_reconciliation">客户对账</string>
    <string name="statement">对账单</string>
    <string name="special_event">去抢购</string>
    <string name="consultation">咨询</string>
    <string name="forward">转发</string>
    <string name="purchase">购买</string>
    <string name="choose_size_purchase_orders">先选尺码 再按购买下单</string>
    <string name="distance_activity_ends">距活动结束</string>
    <string name="day">天</string>
    <string name="end_time">结束时间</string>
    <string name="start_forward">开始转发</string>
    <string name="settlement">结算</string>
    <string name="purchasing_number">代购号：</string>
    <string name="member_status">会员状态</string>
    <string name="not_member_yet">您还不是会员</string>
    <string name="account_balance">账户余额</string>
    <string name="my_invitation_code">我的邀请码</string>
    <string name="search_all">搜索品牌：全部</string>
    <string name="purchasing_num">代购编号</string>
    <string name="recycling_list">回收清单</string>
    <string name="receiving_address">收货地址</string>
    <string name="default_address">默认</string>
    <string name="editor">编辑</string>
    <string name="forwarded">已转发： --</string>
    <string name="rewarded">已奖励： --</string>
    <string name="deductible_balance">可抵扣余额： --</string>
    <string name="amount_deducted">已抵扣金额： --</string>
    <string name="wechat_no">微信号：</string>
    <string name="my_orders">我的订单</string>
    <string name="remaining_time_order_payment">订单支付剩余时间：</string>
    <string name="order_num">订单编号： </string>
    <string name="order_time">下单时间： </string>
    <string name="cancel_orders">取消订单</string>
    <string name="copy_order_num">复制单号</string>
    <string name="update_address">修改地址</string>
    <string name="order_amount">订单金额（ 实付 ）</string>
    <string name="refund_amount">退款金额</string>
    <string name="wweep_order_picking">扫码拣货</string>
    <string name="submit_application">提交申请</string>
    <string name="after_sales_audit">爱库存售后审核</string>
    <string name="refund_and_aftersale">退款/售后</string>
    <string name="after_sales_record">售后申请记录</string>
    <string name="platform_shortage">平台缺货</string>
    <string name="aftersales_apply">售后记录</string>
    <string name="default_addr">默认地址</string>
    <string name="recharge">帐户充值</string>
    <string name="member_rights">会员权益</string>
    <string name="akc_nick_name">爱库存会员昵称：</string>
    <string name="membership_packages">会员套餐</string>
    <string name="check_all">查看全部</string>
    <string name="loading">正在加载中...</string>
    <string name="updating_user_info">正在更新用户资料...</string>
    <string name="updated_user_info">已更新完成</string>
    <string name="comment">评论</string>
    <string name="no_data">暂无数据</string>
    <string name="no_network">网络错误,点击重试</string>
    <string name="goods_intro_copyed_can_parse">商品描述已复制 可以长按\'粘贴\'</string>
    <string name="growth_pictures_text_share">合并成长图文进行分享</string>
    <string name="skip_nbsp">下一条</string>
    <string name="forward_previous">上一条</string>
    <string name="forward_nbsp">转&#8194;发</string>
    <string name="get_more">更多加载中……</string>
    <string name="missing_complaint">漏发申诉</string>
    <string name="scan_code_picking_confirmation">扫码拣货确认</string>
    <string name="barcode">条码：</string>
    <string name="scan_remark">备注：</string>
    <string name="look_lights">看看哪些光了</string>
    <string name="see_what_missing">看看哪些没光</string>
    <string name="account_balance_details">账户余额明细</string>
    <string name="unpay_cancel_order">未支付 超时取消</string>
    <string name="order_switch_intro">备注开关关闭时 下单将直接加入购物车</string>
    <string name="address_management">收货地址管理</string>
    <string name="address_receiver">收货人：</string>
    <string name="address_phone">电&#8194;&#8194;话： </string>
    <string name="address_city">省&#8194;市&#8194;区</string>
    <string name="address_input_detail_address">请输入详细地址</string>
    <string name="address_set_default_address">是否设为默认地址</string>
    <string name="manager">管理</string>
    <string name="add">添加</string>
    <string name="add_address">添加收货地址</string>
    <string name="editor_address">编辑地址</string>
    <string name="add_addr">添加地址</string>
    <string name="address_manager">地址管理</string>
    <string name="choose_address">选择地址</string>
    <string name="delete_address_dialog_content">确定删除该收货地址 ?</string>
    <string name="input_consignee_name">请填写收货人名字</string>
    <string name="input_consignee_mobile">请填写收货人电话</string>
    <string name="choose_city">请选择省市区</string>
    <string name="input_detail_address">请填写详细地址</string>
    <string name="input_right_mobile">请填写正确的电话</string>
    <string name="input_express_company">请输入快递公司</string>
    <string name="input_courier_number">请输入快递单号</string>
    <string name="no_goods">暂无相关商品</string>
    <string name="input_remark_info">请输入备注信息</string>
    <string name="add_remark_success">成功添加备注</string>
    <string name="forward_product_normal_selected">转发图片默认选项</string>
    <string name="forward_product_normal_intro_more_img_no_text">仅转发商品图片，描述文字需手动复制粘贴</string>
    <string name="forward_product_outof_stock">是否转发缺货尺码</string>
    <string name="forward_product_outof_stock_intro">活动开始{0}小时内 转发缺货尺码</string>
    <string name="forward_product_fare">转发商品加价</string>
    <string name="forward_product_fare_intro">所以商品在平台播货价基础{0}转发</string>
    <string name="forward_set">转发配置选项</string>
    <string name="exit_app">退出登录</string>
    <string name="team_members">我的好友【{0}人】</string>
    <string name="total_invitations_num">累计邀请人数：{0}人</string>
    <string name="viplevel0_num">VIP0人数：{0}人</string>
    <string name="loss_num">流失人数：{0}人</string>
    <string name="team_member">团队成员</string>
</resources>