<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_team_awards" />
    </RelativeLayout>

    <View style="@style/h_line" />

    <TextView
        android:id="@+id/team_member_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_10"
        android:text="@string/team_members" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/font_size_12sp"
            android:layout_height="wrap_content"
            android:text="@string/total_invitations_num" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/font_size_12sp"
            android:text="@string/viplevel0_num" />

        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/font_size_12sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/loss_num" />
    </LinearLayout>

    <View style="@style/h_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/team_member" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/team_member" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/team_member" />
    </LinearLayout>

    <View style="@style/h_line" />
</LinearLayout>