<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_title_toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/toolbar"
            android:background="@color/color_tab_line" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="@dimen/space_4"
        android:paddingBottom="@dimen/space_4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/order_type_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/space_8"
            android:text="@string/sale_all"
            android:textColor="@color/selector_ordertype_text"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/order_type_daizhifu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/space_8"
            android:text="@string/pending_payment"
            android:textColor="@color/selector_ordertype_text"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/order_type_yizhifu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/space_8"
            android:text="@string/pending_shipment"
            android:textColor="@color/selector_ordertype_text"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/order_type_jianhuozhong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/space_8"
            android:text="@string/picking"
            android:textColor="@color/selector_ordertype_text"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/order_type_yifahuo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/space_8"
            android:text="@string/shipped"
            android:textColor="@color/selector_ordertype_text"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/order_type_canceled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/space_8"
            android:text="@string/canceled"
            android:textColor="@color/selector_ordertype_text"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>

    <View
        style="@style/h_line"
        android:layout_height="1dp" />

    <com.jude.easyrecyclerview.EasyRecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/color_bg_light"
        app:recyclerClipToPadding="true"
        app:scrollbarStyle="insideOverlay"
        app:scrollbars="vertical" />

</LinearLayout>